--- a/requirements.txt
+++ b/requirements.txt
@@ -1,94 +1,22 @@
-alembic==1.13.1
-altgraph @ file:///AppleInternal/Library/BuildRoots/39d9dc1a-2111-11f0-be06-226177e5bb69/Library/Caches/com.apple.xbs/Sources/python3/altgraph-0.17.2-py2.py3-none-any.whl
-annotated-types==0.7.0
-anyio==4.8.0
-async-timeout==4.0.3
-attrs==23.2.0
-awscli==1.33.13
-bcrypt==4.2.0
-beautifulsoup4==4.12.2
-bidict==0.22.1
-blinker==1.7.0
-boto3==1.34.131
-botocore==1.34.131
-bs4==0.0.1
-certifi==2023.11.17
-cffi==1.16.0
-charset-normalizer==3.3.0
-click==8.1.3
-colorama==0.4.6
+blinker==1.9.0
+click==8.1.8
 contourpy==1.3.0
-cryptography==41.0.4
 cycler==0.12.1
-docutils==0.16
-exceptiongroup==1.2.0
-fastapi==0.115.11
-Flask==3.0.2
-Flask-Admin==1.6.1
-Flask-Cors==4.0.0
-Flask-Login==0.6.3
-Flask-Migrate==4.0.7
-Flask-SocketIO==5.3.6
-Flask-SQLAlchemy==3.1.1
-fonttools==4.56.0
-future @ file:///AppleInternal/Library/BuildRoots/39d9dc1a-2111-11f0-be06-226177e5bb69/Library/Caches/com.apple.xbs/Sources/python3/future-0.18.2-py3-none-any.whl
-greenlet==3.0.3
-h11==0.14.0
-httpcore==1.0.7
-httpx==0.28.1
-idna==3.6
-importlib-metadata==4.12.0
+Flask==3.1.1
+fonttools==4.58.1
+importlib_metadata==8.7.0
 importlib_resources==6.5.2
-itsdangerous==2.1.2
-Jinja2==3.1.2
-jmespath==1.0.1
+itsdangerous==2.2.0
+Jinja2==3.1.6
 kiwisolver==1.4.7
-lxml==5.1.0
-macholib @ file:///AppleInternal/Library/BuildRoots/39d9dc1a-2111-11f0-be06-226177e5bb69/Library/Caches/com.apple.xbs/Sources/python3/macholib-1.15.2-py2.py3-none-any.whl
-Mako==1.3.3
-MarkupSafe==2.1.1
+MarkupSafe==3.0.2
 matplotlib==3.9.4
 numpy==2.0.2
-opencv-python==4.11.0.86
-outcome==1.3.0.post0
-packaging==24.2
-passlib==1.7.4
-pdfminer.six==20221105
-pillow==11.1.0
-psycopg2==2.9.10
-psycopg2-binary==2.9.10
-pyasn1==0.6.0
-pycparser==2.21
-pydantic==2.10.6
-pydantic_core==2.27.2
-pyparsing==3.2.1
-PySocks==1.7.1
+packaging==25.0
+pillow==11.2.1
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-engineio==4.8.2
-python-multipart==0.0.20
-python-socketio==5.11.0
-PyYAML==6.0.1
-redis==5.0.8
-requests==2.31.0
-rsa==4.7.2
-s3transfer==0.10.1
 scipy==1.13.1
-selenium==4.16.0
-simple-websocket==1.0.0
-six @ file:///AppleInternal/Library/BuildRoots/39d9dc1a-2111-11f0-be06-226177e5bb69/Library/Caches/com.apple.xbs/Sources/python3/six-1.15.0-py2.py3-none-any.whl
-sniffio==1.3.0
-sortedcontainers==2.4.0
-soupsieve==2.5
-spotipy==2.24.0
-SQLAlchemy==2.0.28
-starlette==0.46.1
-trio==0.24.0
-trio-websocket==0.11.1
-typing_extensions==4.12.2
-urllib3==1.26.20
-uvicorn==0.34.0
-Werkzeug==3.0.1
-wsproto==1.2.0
-WTForms==3.1.2
-zipp==3.8.1
+six==1.17.0
+Werkzeug==3.1.3
+zipp==3.22.0
